--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-md-editor": "^3.11.2",
+    "emailjs-com": "^3.2.0",
+    "nanoid": "^3.3.2",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-mde": "^11.5.0",
+    "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
+    "react-showdown": "^2.3.1",
+    "react-split": "^2.0.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
