--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lordlopez666.github.io/portfolio2022",
+  "homepage": "http://lordlopez666.github.io/portfolio",
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
