--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://lordlopez666.github.io/portfolio",
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +12,7 @@
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-mde": "^11.5.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
@@ -23,8 +23,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,7 +45,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
-  }
+  "devDependencies": {}
 }
